# story-crafter-google-adk

./: .dockerignore  .env.example  .gcloudignore  .gitignore  DEPLOY.md  Dockerfile  FLOW_DIAGRAM.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERTEX_AI_SETUP.md  app.py  example.py  main.py  memory_bank_config.json  pyproject.toml  setup.sh  setup_gcp_resources.py  verify_integration.py
.streamlit/: config.toml
agents/: __init__.py
agents/art_director/: agent.py
agents/character_forge/: agent.py
agents/orchestrator/: agent.py
agents/orchestrator/story_orchestrator/: agent.py
agents/plot_architect/: agent.py
agents/router/: agent.py
agents/safety/: agent.py
agents/story_editor/: agent.py
agents/story_guide/: agent.py
agents/story_quality_loop/: agent.py
agents/story_question_answerer/: agent.py
agents/story_writer/: agent.py
agents/user_intent/: agent.py
agents/worldbuilder/: agent.py
eval_results/: eval_20251130_182819.json
evals/: __init__.py  datasets.py  metrics.py  runner.py
models/: __init__.py  artwork.py  character.py  intent.py  plot.py  routing.py  story.py  story_feedback.py  world.py
orchestrator/: __init__.py  agent.py
orchestrator/story_orchestrator/: agent.py
scripts/: apply_memory_config.py  create_agent_engine.py  setup_memory_bank.py
services/: llm.py  memory.py  memory_config.py  perspective.py  story_engine.py
tests/: test_evals.py  test_perspective.py  test_router_parsing.py  test_safety_agent.py  test_vertex_integration.py
ui/: theme.py
