[project]
name = "story-crafter-adk"
version = "0.1.0"
description = "Multi-agent story generation system powered by the Google Agent Development Kit (ADK) with Vertex AI Memory Bank integration."
authors = [{ name = "Story Crafter Contributors" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0,<0.119.0",
    "google-adk>=1.19.0",
    "google-cloud-aiplatform>=1.111.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]

[project.urls]
Homepage = "https://github.com/StoryCrafter/story-crafter-adk"

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "models*"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
